--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
      <header>
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
                <div class="container">
                     <a class="navbar-brand" href="#">Super Brand</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -38,7 +38,7 @@
                               <i style="font-size: 25px;" class="fas fa-shopping-cart text-white"></i>
                               <span
                                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                   <span id="total-cart-item">9+</span>
+                                   <span id="total-cart-item"></span>
                                    <span class="visually-hidden">Total cart item</span>
                               </span>
                          </button>
@@ -58,26 +58,13 @@
                               aria-label="Close"></button>
                     </div>
                     <div id="cart-container" class="offcanvas-body ">
-                         <div class="row align-items-center mb-2">
-                              <div class="col-2">
-                                   <img class="w-100"
-                                        src="https://static-01.daraz.com.bd/p/mdc/88926bb91e0148914a509d25169ac1df.jpg"
-                                        alt="">
-                              </div>
-                              <div class="col-4"><small>Samsung Galaxy M02s</small></div>
-                              <div class="col-3">$<span>1000</span></div>
-                              <div class="col-3">
-                                   <div class="btn-group" role="group" aria-label="Basic example">
-                                        <button type="button" class="btn btn-secondary btn-sm">-</button>
-                                        <button type="button" disabled class="btn btn-secondary btn-sm">0</button>
-                                        <button type="button" class="btn btn-secondary btn-sm">+</button>
-                                   </div>
-                              </div>
-                         </div>
+
                     </div>
                     <div class="offcanvas-footer d-flex align-items-center justify-content-between pb-2">
                          <div>Total Price: $<span id="total-price">2500</span></div>
-                         <button class="btn btn-info">Checkout Now</button>
+                         <!-- Button trigger modal -->
+                         <button onclick="deleteCartItems()" class="btn btn-info" data-bs-toggle="modal"
+                              data-bs-target="#exampleModal">Checkout Now</button>
                     </div>
                </div>
           </section>
@@ -106,6 +93,20 @@
                                    </div>
                               </div>
                          </div> -->
+                    </div>
+               </div>
+          </section>
+
+          <!-- Alert section start -->
+
+          <section>
+
+
+               <!-- Modal -->
+               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div id="alert-modal" class="modal-dialog modal-dialog-centered">
+
                     </div>
                </div>
           </section>
